bad/mul_invalid_types_array_void.example_compiler_output
ERROR
[1mbad/mul_invalid_types_array_void.lat:5:16: [1;31merror: [0;1mmultiplication is defined only for int values, not `string[]` and `void`[m
	new string[3] * foo();
	              [1;32m^[m
